[package]
name = "sc-rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["auth"]
auth = ["async-trait"]

[dependencies]
tokio = {version="*",features=["net","macros","rt","io-util","sync","time"]}
serde = { version = "*", features = [ "derive" ] }
clap = {version = "*", features = ["derive"] }
axum = {version = "*",features=["ws"]}
serde_json = "*"
simple_logger = "*"
log = "*"
async-trait = {version = "*",optional = true }
encoding = "*"
tokio-stream ="*"
futures = "*"

[profile.release]
strip = true
opt-level = 'z'
lto=true

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = 'abort'
rpath = false